@@ -108,7 +108,6 @@ CPPFLAGS += -DREVISION=\"$(REVISION)\"
 CPPFLAGS += -DASTERISK=$(ASTERISK)
 CPPFLAGS += -DCHANNEL_TABLE_SIZE=$(CHANNEL_TABLE_SIZE)
 CPPFLAGS += -DCONFERENCE_TABLE_SIZE=$(CONFERENCE_TABLE_SIZE)
-CPPFLAGS += -DONEMIXTHREAD
 CPPFLAGS += -DCACHE_CONF_FRAMES
 
 #
